Changed example naming

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -2,7 +2,7 @@ CC     = gcc
 CFLAGS = -std=c89 -Wall -pedantic -I ..
 DEPS   = ../picounit.h
 
-all: ex1 ex2
+all: example1 example2
 
 picounit.o: ../picounit.c $(DEPS)
 	$(CC) -c -o picounit.o $< $(CFLAGS)
@@ -10,13 +10,13 @@ picounit.o: ../picounit.c $(DEPS)
 %.o: %.c $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
 
-ex1: ex1.o picounit.o $(DEPS)
-	$(CC) -o ex1 ex1.o picounit.o
+example1: example1.o picounit.o $(DEPS)
+	$(CC) -o example1 example1.o picounit.o
 
-ex2: ex2.o picounit.o $(DEPS)
-	$(CC) -o ex2 ex2.o picounit.o
+example2: example2.o picounit.o $(DEPS)
+	$(CC) -o example2 example2.o picounit.o
 
 .PHONY: clean
 
 clean:
-	rm ex1 ex2 *.o
+	rm example1 example2 *.o
